--- a/service-front-web/src/main/resources/templates/index.html
+++ b/service-front-web/src/main/resources/templates/index.html
@@ -20,6 +20,9 @@
 <div class="container mt-5 text-center">
     <h1>Bienvenue sur notre service de location de voitures</h1>
     <p>Choisissez votre véhicule et effectuez votre réservation en quelques clics.</p>
+
+    <img th:src="@{/images/loca.jpg}" src="/images/loca.jpg" alt="Location de voitures" class="img-fluid mb-4" style="max-height: 400px;">
+    <div class="mt-3">
     <a class="btn btn-primary" href="/vehicules">Voir les véhicules</a>
 </div>
 
