--- a/service-front-web/src/main/resources/templates/vehicules.html
+++ b/service-front-web/src/main/resources/templates/vehicules.html
@@ -61,7 +61,9 @@
         <a class="navbar-brand" href="/">🚗 LocationVoitures</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link active" href="/">Acceuil</a></li>
                 <li class="nav-item"><a class="nav-link active" href="/vehicules">Véhicules</a></li>
+
             </ul>
         </div>
     </div>
@@ -133,9 +135,9 @@
                             <span class="badge bg-success">Disponible</span>
                         </div>
 
-                        <!-- Bouton détails -->
+                        <!-- Bouton réservation -->
                         <div class="mt-3">
-                            <a th:href="@{'/vehicules/' + ${v.registration}}" class="btn btn-primary btn-sm w-100">Voir détails</a>
+                            <a th:href="@{'/reservation-form?registration=' + ${v.registration}}" class="btn btn-success btn-sm w-100">Réservation</a>
                         </div>
                     </div>
                 </div>
